<resources>
    <string name="app_name">POMMESMANN</string>
    <string name="titleTextView">POMMESMANN</string>
    <string name="yourScoreTextView">Your Score:</string>
    <string name="newHighscoreTextView">New Highscore!</string>
    <string name="nameEditText">Your Name</string>
    <string name="submitNameButton">submit</string>
    <string name="highscoreTextView">highscore:&#160;</string>
    <string name="soundCheckBox">sound</string>
    <string name="aboutButton">about</string>
    <string name="leftHandedCheckBox">left handed&#160;</string>
    <string name="shopButton">shop</string>
    <string name="itemBuyButton">buy</string>
    <string name="itemCheckBox">in use&#160;</string>
    <string name="itemMaxLevel">max level!</string>
    <string name="dialogPositive">ok</string>
    <string name="dialogNegative">cancel</string>
    <string name="coinsToast">Not enough Coins!</string>
    <string name="secretTextView">Thanks to the Secret of POMMESMANN, \n you got the double amount of Coins!</string>


    <!-- chooseNameDialog  -->
    <string name="chooseNameDialogTitle">Welcome to POMMESMANN!</string>
    <string name="chooseNameDialogText">If you want to publish your highscore online, please choose a name! \n
        Your highscore will be published alongside your chosen name.</string>
    <string name="chooseNameHint">Name</string>
    <string name="confirmButton">confirm</string>
    <string name="uploadTextView">Share your highscore online!</string>
    <string name="submitHighscoreButton">submit</string>
    <string name="laterButton">maybe later</string>
    <string name="deleteDataTextView">Delete all your data from online highscore list</string>
    <string name="resetTextView">Reset POMMESMANN and start from the beginning</string>
    <string name="changeNameTextView">Change your name in the online highscore list</string>
    <string name="deleteDataButton">delete</string>
    <string name="resetButton">reset</string>
    <string name="settingsTitleTextView">Settings</string>
    <string name="leftHandedTextView">Optimize POMMESMANN for left-handers</string>
    <string name="aboutTextView">See what POMMESMANN is about</string>

    <!-- highscoreDialog -->
    <string name="highscoreDialogTitle">Top Highscores</string>
    <string name="highscoresButton">Top Highscores</string>
</resources>
