<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical"
    tools:context=".Activities.SettingsActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:text="@string/settingsTitleTextView"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <LinearLayout
        android:id="@+id/changeNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeNameTextView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Name"
                android:inputType="textPersonName"
                android:maxLength="15" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/oval_selector"
                android:clickable="false"
                android:text="@string/submitHighscoreButton"
                android:textColor="#FFF" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/deleteDataLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/deleteDataTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteDataTextView" />

        <Button
            android:id="@+id/deleteDataButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/oval_selector"
            android:text="@string/deleteDataButton"
            android:textColor="#FFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resetTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetTextView" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/oval_selector"
            android:text="@string/resetButton"
            android:textColor="#FFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leftHandedTextView" />

        <CheckBox
            android:id="@+id/leftHandedCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:button="@drawable/checkbox_selector"
            android:layoutDirection="rtl"
            android:text="@string/leftHandedCheckBox"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutTextView" />

        <Button
            android:id="@+id/aboutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/oval_selector"
            android:text="@string/aboutButton"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>