<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">


    <TextView
        android:id="@+id/coinsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>



    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coinsTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/titleTextView"
        android:textColor="@color/titleText"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/titleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/startbutton_selector" />

    <Button
        android:id="@+id/tutorialButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/startButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/tutorialbutton_selector" />

    <Button
        android:id="@+id/shopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tutorialButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/oval_selector"
        android:text="@string/shopButton"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:id="@+id/highscoreLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/shopButton"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/highscoreTextView"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <TextView
            android:id="@+id/currentHighscoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:paddingBottom="5dp"
        >

        <CheckBox
            android:id="@+id/soundCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:text="@string/soundCheckBox" />

        <Button
            android:id="@+id/aboutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/oval_selector"
            android:text="@string/aboutButton"
            android:textColor="#FFFFFF" />

        <CheckBox
            android:id="@+id/leftHandedCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layoutDirection="rtl"
            android:text="@string/leftHandedCheckBox" />
    </RelativeLayout>

</RelativeLayout>