<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.GameoverActivity">

    <TextView
        android:id="@+id/coinsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/coinsTextView"
        android:layout_margin="20dp"
        android:text="@string/yourScoreTextView"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <LinearLayout
        android:id="@+id/highscoreLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scoreTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/newHighscoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/newHighscoreTextView"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <RelativeLayout
            android:id="@+id/textEditLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:ems="10"
                android:hint="@string/nameEditText"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/submitNameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/nameEditText"
                android:layout_toRightOf="@+id/nameEditText"
                android:background="@drawable/oval_selector"
                android:text="@string/submitNameButton"
                android:textColor="#FFFFFF" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/mainMenuButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/homebutton_selector" />

        <Button
            android:id="@+id/restartButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/restartbutton_selector" />
    </LinearLayout>
</RelativeLayout>